# router-extension-template

./: Cargo.toml  README.md
examples/: config.yaml  schema.graphql
src/: lib.rs  main.rs
src/layers/: hello.rs  mod.rs
src/plugins/: hello.rs  hello_world.rs  metadata_validation.rs  mod.rs
src/services/: mod.rs  require_operation_name.rs
