[package]
name = "rust-router-extension-experiments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
apollo-router = {git = "https://github.com/apollographql/router"}
apollo-parser = { git = "https://github.com/apollographql/apollo-rs.git", rev = "9a14371f3e5352920c74dcae85fa4e71b24f0449" }
async-trait = "0.1.52"
bytes = "1.1.0"
clap = { version = "3.0.13", features = ["derive", "clap_derive"] }
directories = "4.0.1"
futures = {version = "0.3.21", features = ["thread-pool"]}
opentelemetry = { version = "0.17.0", features = ["rt-tokio", "serialize"] }
reqwest = {version = "0.11.9", features = ["json", "stream"]}
reqwest-middleware = "0.1.5"
reqwest-tracing = {version = "0.2.1", features = ["opentelemetry_0_17"]}
tokio = {version = "1.17.0", features = ["full"]}
tokio-util = { version = "0.7.0", features = ["net", "codec"] }
tower = {version = "0.4.12", features = ["util"]}
tower-util = "0.3.1"
tower-service = "0.3.1"
tower-http = { version = "0.2.3", features = ["trace"] }
serde = { version = "1.0.136", features = ["derive", "rc"] }
serde_json = "1.0.79"
serde_yaml = "0.8.23"
tracing = "0.1.31"
tracing-opentelemetry = "0.17.2"
tracing-subscriber = { version = "0.3.9", features = ["env-filter", "json"] }
url = { version = "2.2.2", features = ["serde"] }

